# docs/swagger.json
@@ -939,6 +939,42 @@
                 }
             }
         },
+        "/stpdao/v2/dao/one": {
+            "get": {
+                "description": "Dao one",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dao"
+                ],
+                "summary": "Dao one",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "dao Address",
+                        "name": "daoAddress",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "chainId",
+                        "name": "chainId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResDaoOne"
+                        }
+                    }
+                }
+            }
+        },
         "/stpdao/v2/error/info": {
             "post": {
                 "description": "error info",
@@ -1652,6 +1688,37 @@
                 }
             }
         },
+        "/stpdao/v2/spaces/delete": {
+            "post": {
+                "description": "delete completely team spaces, request header: Authorization=Bearer ${JWT Token}",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spaces"
+                ],
+                "summary": "delete completely team spaces",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ReqDeleteTeamSpaces"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/stpdao/v2/spaces/list": {
             "get": {
                 "description": "team spaces list",
@@ -2021,6 +2088,37 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.ReqCreateTask"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/stpdao/v2/task/delete": {
+            "post": {
+                "description": "delete completely task, request header: Authorization=Bearer ${JWT Token}",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "task"
+                ],
+                "summary": "delete completely task",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ReqDeleteTask"
                         }
                     }
                 ],
@@ -2732,6 +2830,34 @@
                 }
             }
         },
+        "models.ReqDeleteTask": {
+            "type": "object",
+            "properties": {
+                "spacesId": {
+                    "type": "integer"
+                },
+                "taskId": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
+        "models.ReqDeleteTeamSpaces": {
+            "type": "object",
+            "properties": {
+                "chainId": {
+                    "type": "integer"
+                },
+                "daoAddress": {
+                    "type": "string"
+                },
+                "teamSpacesId": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.ReqJobsAlter": {
             "type": "object",
             "properties": {
@@ -2871,6 +2997,7 @@
             "type": "object",
             "properties": {
                 "access": {
+                    "description": "public;private",
                     "type": "string"
                 },
                 "chainId": {
@@ -3314,6 +3441,71 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.ResDaoOne": {
+            "type": "object",
+            "properties": {
+                "chainId": {
+                    "type": "integer"
+                },
+                "creator": {
+                    "type": "string"
+                },
+                "daoAddress": {
+                    "type": "string"
+                },
+                "daoLogo": {
+                    "type": "string"
+                },
+                "daoName": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "discord": {
+                    "type": "string"
+                },
+                "github": {
+                    "type": "string"
+                },
+                "handle": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "members": {
+                    "type": "integer"
+                },
+                "proposalThreshold": {
+                    "type": "string"
+                },
+                "tokenAddress": {
+                    "type": "string"
+                },
+                "tokenChainId": {
+                    "type": "integer"
+                },
+                "totalProposals": {
+                    "type": "integer"
+                },
+                "twitter": {
+                    "type": "string"
+                },
+                "votingPeriod": {
+                    "type": "integer"
+                },
+                "votingQuorum": {
+                    "type": "string"
+                },
+                "votingType": {
+                    "type": "string"
+                },
+                "website": {
+                    "type": "string"
                 }
             }
         },
